vendored_parsers/tree-sitter-astro/corpus/astro-doc-example.txt
====================
The example given in Astro docs
====================

---
// Anything inside the code fence is your component script.
// This JavaScript code runs at build-time.
// See below to learn more about what you can do.
console.log('This runs at build-time, is visible in the CLI output');
// Tip: TypeScript is also supported out-of-the-box!
const thisWorks: number = 42;
---
<div class="example-1">
  <h1>Hello world!</h1>
</div>
<!-- This is the example given in Astro docs -->

--------------------

(document
  (frontmatter
    (frontmatter_js_block))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name)))
  (comment))
