vendored_parsers/tree-sitter-astro/corpus/case-should-be-preserved.txt
====================
Case should matter
====================

<!-- Inbuilt tags should not conflict with different-cased components (<meta> vs <Meta>) -->
<Meta>
    <p>
    </p>
</Meta>
<!-- ...but don't also confuse <meta> with something else -->
<meta charset="utf-8">

--------------------

(document
  (comment)
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name)))
  (comment)
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))))
