vendored_parsers/tree-sitter-astro/corpus/element-in-html-interpolation.txt
===
An element in a HTML interpolation
===

{ <p> it'll </p> }

-------

(document
  (html_interpolation
    (permissible_text)
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (permissible_text)))
