vendored_parsers/tree-sitter-astro/corpus/empty-frontmatter.txt
====================
Empty frontmatter should parse correctly
====================

---
---
<div>
</div>

--------------------

(document
  (frontmatter
    (frontmatter_js_block))
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))
