vendored_parsers/tree-sitter-astro/corpus/interpolated-attribute-map.txt
===
Interpolated attribute map (without equal sign or name)
===

<div regattr="hi" {...specialinterp} reginterp={interp}>
</div>

-------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_interpolation
          (attribute_js_expr)))
      (attribute
        (attribute_name)
        (attribute_interpolation
          (attribute_js_expr))))
    (end_tag
      (tag_name))))
