vendored_parsers/tree-sitter-astro/corpus/self-closing-script-and-style-tags.txt
===
Self closing script and style tags
===

<p> works </p>
<script src="./fake" />
<style someattr="idk" />
<p> worker </p>

------

(document
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (script_element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))))
  (style_element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))))
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))
